--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "firebase": "^5.5.3",
     "slugify": "^1.3.1",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuejs-paginate": "^2.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
