--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "firebase": "^5.5.3",
+    "moment": "^2.22.2",
     "slugify": "^1.3.1",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
