--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.22.2",
     "slugify": "^1.3.1",
     "vue": "^2.5.17",
+    "vue-meta": "^1.5.6",
     "vue-router": "^3.0.1",
     "vuejs-paginate": "^2.0.1"
   },
